--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,12 @@ dependencies = [
     "SQLAlchemy-Utils>=0.41"
 ]
 
+[dependency-groups]
+dev = [
+    # https://github.com/sqlalchemy/sqlalchemy/pull/12459:
+    "greenlet>=3.1"
+]
+
 [project.urls]
 Homepage = "http://github.com/toirl/pytest-sqlalchemy/"
 
