--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           - "3.12"
           - "3.13"
         uv-resolution:
-          - "lowest"
+          - "lowest-direct"
           - "highest"
     steps:
       - uses: actions/checkout@v4
