--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,5 +99,6 @@ jobs:
 
       - name: Run tests with MySQL
         if: matrix.database == 'mysql'
+        # 127.0.0.1 is to persuade mysqlclient to use tcp rather than the domain socket :-/
         run: |
-          uv run  --all-extras --dev --with mysqlclient --resolution ${{ matrix.uv-resolution }} -m pytest --sqlalchemy-connect-url="mysql://root:mysql@localhost:3306/test_db?protocol=tcp"
+          uv run  --all-extras --dev --with mysqlclient --resolution ${{ matrix.uv-resolution }} -m pytest --sqlalchemy-connect-url="mysql://root:mysql@127.0.0.1:3306/test_db"
