--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,10 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    "coverage>=7.8.0",
     "pytest>=8.0",
     "sqlalchemy>=1.4",
-    "SQLAlchemy-Utils>=0.41"
+    "SQLAlchemy-Utils>=0.41",
 ]
 
 [project.urls]
@@ -29,3 +30,6 @@ sqlalchemy = "pytest_sqlalchemy"
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[tool.coverage.run]
+source = ["pytest_sqlalchemy", "tests"]
