--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,6 @@ build-backend = "setuptools.build_meta"
 
 [tool.coverage.run]
 source = ["pytest_sqlalchemy", "tests"]
+
+[tool.pytest.ini_options]
+norecursedirs = ["tests/examples"]
