--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,10 @@ sqlalchemy = "pytest_sqlalchemy"
 
 [dependency-groups]
 dev = [
+    "mypy>=1.15.0",
     "pytest-xdist>=3.6.1",
 ]
+
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
@@ -38,6 +40,14 @@ build-backend = "setuptools.build_meta"
 [tool.coverage.run]
 source = ["pytest_sqlalchemy", "tests"]
 parallel = true
+
+[tool.mypy]
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+
+[[tool.mypy.overrides]]
+module = "sqlalchemy_utils.*"
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 norecursedirs = ["tests/examples"]
