--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,7 +137,7 @@ jobs:
         run: uv sync --dev
 
       - name: Run tests
-        run: uv run mypy pytest_sqlalchemy.py tests
+        run: uv run mypy src tests
 
   formatting:
     runs-on: ubuntu-latest
