--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,12 +40,16 @@ docs = [
 ]
 
 [build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.coverage.run]
 source = ["pytest_sqlalchemy", "tests"]
 parallel = true
+
+[tool.hatch.build.targets.sdist]
+# paranoidly only include the package in the sdist: https://github.com/pypa/hatch/issues/304
+packages = ["src/pytest_sqlalchemy"]
 
 [tool.mypy]
 disallow_untyped_defs = true
