--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.repository == 'pytest-dev/pytest-sqlalchemy' && github.event.workflow_run.conclusion == 'success' }}
     outputs:
       tag: ${{ steps.carthorse.outputs.tag }}
     steps:
